Fix to image not showing on front page

--- a/portfolio/src/styles/style.css
+++ b/portfolio/src/styles/style.css
@@ -35,7 +35,7 @@
 }
 
 .backgroundImage {
-    background-image: url(/img/matt-landscape.jpg);
+    background-image: url(img/matt-landscape.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
